// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mask renders correctly 1`] = `
<div
  class="zw-mask zw-mask--normal"
/>
`;

exports[`Mask type is transparent 1`] = `
<div
  class="zw-mask zw-mask--transparent"
/>
`;
